fix thumb size on safari

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -153,7 +153,7 @@ body {
 
         img#me {
           max-width: 180px;
-          height: 100%;
+          height: auto;
           margin-right: 50px;
           margin-bottom: 16px;
 
